Updated directory scheme

--- a/exps/baseline_cbr.ipynb
+++ b/exps/baseline_cbr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "[5 rows x 728 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -691,6 +691,9 @@
     "res = pd.DataFrame(columns=['modname', 'is_summary', 'has_prepended', 'k', 'weighted', 'f1_micro', 'f1_macro', 'mcc', 'prr_delta', 'prr_fweights'])\n",
     "res.to_csv(respath, mode='w', header=True)\n",
     "\n",
+    "# Path where embeddings are located\n",
+    "embpath = mimicpath / 'embeddings'\n",
+    "\n",
     "e_n = len(modnames) * len(knn) * len(weighted)  # TODO: In addition to these experiments we will try: modstrat (R, S, PR(chartdata embedded)), \n",
     "e_count = 1\n",
     "for modname, mod_truncation in modnames:\n",
@@ -701,7 +704,7 @@
     "            modname = re.sub('[^a-zA-Z0-9]+', '', modname)\n",
     "            mod_fname = f'embeddings_{modname}_{'summary_' if summary_mode else ''}S{samp_size}_T{mod_truncation}{'_balanced' if balanced_data else ''}{'_PR' if withprepended else ''}.npy'\n",
     "            print(f'> Loading embeddings from {mod_fname}...')\n",
-    "            embeddings = np.load(mimicpath / mod_fname)\n",
+    "            embeddings = np.load(embpath / mod_fname)\n",
     "\n",
     "            # hadmid-index mappings (and back)\n",
     "            hadm2idx = {hadm: i for i, hadm in enumerate(emb_hadmids)}\n",
