--- a/exps/baseline_lr.ipynb
+++ b/exps/baseline_lr.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,9 @@
     "\n",
     "res = pd.DataFrame(columns=['features', 'tol', 'C', 'solver', 'f1_micro', 'f1_macro', 'mcc'])\n",
     "\n",
+    "# Path where embeddings are located\n",
+    "embpath = mimicpath / 'embeddings'\n",
+    "\n",
     "e_n = len(modnames) * len(lr_tol) * len(lr_C) * len(lr_solver)\n",
     "e_count = 1\n",
     "for  i, modname in enumerate(modnames):\n",
@@ -197,7 +200,7 @@
     "    mod_fname = f'embeddings_{modname}_{'summary_' if summaries else ''}S{samp_size}_T{truncation_side}{'_balanced' if balanced_data else ''}{'_PR' if withprepended else ''}.npy'\n",
     "    \n",
     "    print(f'> Loading embeddings from {mod_fname}...')\n",
-    "    embeddings = np.load(mimicpath / mod_fname)\n",
+    "    embeddings = np.load(embpath / mod_fname)\n",
     "\n",
     "    # Locates train and test data\n",
     "    hadm2idx = {hadm: i for i, hadm in enumerate(emb_hadmids)}\n",
