--- a/exps/llms_simple.ipynb
+++ b/exps/llms_simple.ipynb
@@ -10,8 +10,7 @@
     "import requests\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "\n",
-    "from itertools import product\n"
+    "from itertools import product"
    ]
   },
   {
@@ -60,23 +59,19 @@
     "\n",
     "SEED = 42\n",
     "\n",
-    "# Controls which data to load\n",
+    "## Controls which data file to load\n",
     "samp_size = 5000\n",
     "balanced_data = True\n",
+    "max_chars = 22000       # Anything longer than this will be middle-truncated\n",
+    "ss_size = 200\n",
     "\n",
+    "## Controls which LLM model to fire\n",
     "base_models = [\n",
     "    'll3',\n",
     "    #'medgenius32b',\n",
     "    #'dsmedical8b',\n",
     "    #'biomistral7b'\n",
     "]\n",
-    "\n",
-    "# Just as simple mapping between base mod and summary mod name\n",
-    "summary_mod_map = {\n",
-    "    'iv_ll3_direct': 'll3'\n",
-    "}\n",
-    "\n",
-    "# Controls which llm to fire\n",
     "input_type = ['S', 'R', 'RC']    # (R)eport, (R)eport and (C)hart data as json, (S)ummary (this needs to be precomputed!)\n",
     "output_type = {     # Maps type of output with the actual format that will be requested in the query\n",
     "    'M': {  # Just mortality      \n",
@@ -105,40 +100,15 @@
     "                'DIES'\n",
     "            ]\n",
     "            },\n",
-    "    #       # Extension. Asking for reasoning in pro and against, then for mortality\n",
-    "    #    'RM': {  # Prognosis and mortality      \n",
-    "    #        'type': 'object',\n",
-    "    #        'properties': {\n",
-    "    #            'REASONS LIVES': {\n",
-    "    #                'type': 'string'\n",
-    "    #            },\n",
-    "    #            'REASONS DIES': {\n",
-    "    #                'type': 'string'\n",
-    "    #            },\n",
-    "    #            'DIES': {\n",
-    "    #                'enum': ['YES', 'NO']\n",
-    "    #            }\n",
-    "    #        },\n",
-    "    #        'required': [\n",
-    "    #            'REASONS LIVES',\n",
-    "    #            'REASONS DIES',\n",
-    "    #            'DIES'\n",
-    "    #        ]\n",
-    "    #        }\n",
     "    }\n",
     "\n",
-    "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
-    "#patient_data_columns = [\n",
-    "#    'age',\n",
-    "#    'gender',\n",
-    "#    'diagnose_group_mortality',\n",
-    "#    'diagnose_group_description',\n",
-    "#    'race',\n",
-    "#    'insurance',\n",
-    "#    'marital_status',\n",
-    "#    #'admission_type',\n",
-    "#    ]\n",
+    "## LLM params. num_ctx and temps admit multiple values, which will be tested as separate experiments in the same run\n",
+    "num_ctx = [32]      # Context length (x 1024)\n",
+    "temps = [0.1]       #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
+    "top_k = 20\n",
+    "top_p = 0.5\n",
     "\n",
+    "## Additional data prepro options\n",
     "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
     "# Remapping some column names to make them more significant in the prompt\n",
     "pdc_remap = {\n",
@@ -150,29 +120,7 @@
     "    'diagnose_group_mortality': 'MORTALITY RISK',\n",
     "    'insurance': 'INSURANCE',\n",
     "    #'text': 'REPORT'\n",
-    "}\n",
-    "\n",
-    "num_ctx = [32]   # Context length (x 1024)\n",
-    "temps = [0.1] #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
-    "\n",
-    "\n",
-    "# Fixed model params\n",
-    "top_k = 20  # *20\n",
-    "top_p = 0.5 # *.5\n",
-    "\n",
-    "# Slice long input: Just keep up to max_words of each text\n",
-    "max_chars = 22000\n",
-    "subsamp_size = 200  # Number of entries to test model with. This number will be used to load summaries from disks\n",
-    "\n",
-    "# NOTE use this only to limit the number of entries to process in the experiment\n",
-    "#   Smaller than subsamo_size\n",
-    "minisample = -1\n",
-    "\n",
-    "# If set, attempts to load note summaries from disk and use those instead of the raw reports.\n",
-    "summaries_dir = f'{mimicpath}/summaries/'\n",
-    "#summaries_path = f'{mimicpath}/summaries/summary_{max_chars}mc_ss{subsamp_size}.csv'\n",
-    "\n",
-    "prepend_columns = ['age', 'gender', 'insurance', 'marital_status', 'race']   # Columns in base dataframe to prepend to text"
+    "}"
    ]
   },
   {
@@ -204,7 +152,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Subsampling test data to 200...\n",
       "(200, 19)\n"
      ]
     },
@@ -443,13 +390,9 @@
     }
    ],
    "source": [
-    "# Loads test split\n",
+    "# Loads test split and samples\n",
     "df_test = df.set_index('hadm_id').loc[splits_hadmids['test']]\n",
-    "\n",
-    "# Gets subsample\n",
-    "if subsamp_size:\n",
-    "    print(f'> Subsampling test data to {subsamp_size}...')\n",
-    "    df_test = df_test.sample(subsamp_size, random_state=SEED)\n",
+    "df_test = df_test.sample(ss_size, random_state=SEED) if ss_size else df_test \n",
     "\n",
     "# Middle-truncates long texts...\n",
     "df_test['text'] = df_test['text'].apply(lambda x: x[:(max_chars//2)] + x[-(max_chars//2):] if len(x) > max_chars else x)\n",
@@ -460,25 +403,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if minisample > 0:\n",
-    "    df_test = df_test.iloc[:minisample]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define ollama instance and run in batch\n",
+    "# Sets ollama instance and run in batch\n",
     "\n",
     "tests = {}  # Will keep raw responses\n",
     "instance = 'http://localhost:11434/api/generate'\n",
     "auth_cookie = ''\n",
+    "\n",
+    "res_fpath = Path(f'{pjpath}/exps/results/llms/simple')\n",
+    "res_fpath.mkdir(parents=True, exist_ok=True)\n",
+    "summaries_fpath = mimicpath / 'summaries'\n",
     "\n",
     "for base_model in base_models:\n",
     "    print(f'> [BASE MODEL]: {base_model}')\n",
@@ -493,20 +430,13 @@
     "            # Raw report notes as input\n",
     "            # Preprends patient data to text. Replaces underscore with spaces in both, feature name and value\n",
     "            df_test_i = df_test.copy()\n",
-    "            #df_test_i['input_query'] = df_test_i.apply(lambda x: ''.join([f'{p_cremap}: {str(x[p_cname]).replace('_', ' ')}\\n' for p_cname, p_cremap in pdc_remap.items()]) + x['text'], axis=1)\n",
     "            df_test_i['input_query'] = df_test_i.apply(lambda x: json.dumps({'REPORT': ''.join([f'{p_cremap}: {str(x[p_cname]).replace('_', ' ')}\\n' for p_cname, p_cremap in pdc_remap.items()]) + x['text']}), axis=1)\n",
     "\n",
-    "        elif i_type == 'S':\n",
-    "            # NOTE: Assumes summary has already been loaded in text column\n",
-    "            \n",
+    "        elif i_type == 'S':            \n",
     "            ## Load summary\n",
-    "            # TODO: Use proper one...\n",
-    "            #summaries_path = f'{mimicpath}/summaries/summary_{max_chars}mc_ss{subsamp_size}.csv'\n",
-    "            summaries_path = f'{mimicpath}/summary_S{samp_size}_{'balanced' if balanced_data else ''}_{summary_mod}_mc{max_chars}.csv'\n",
-    "\n",
-    "            #summaries_path = f'{mimicpath}/summaries/summary_{base_model}_{max_chars}mc_ss{subsamp_size}.csv'\n",
-    "            \n",
-    "            df_summaries = pd.read_csv(summaries_path, index_col=0)\n",
+    "            sum_model = 'll3'\n",
+    "            summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{sum_model}_mc{max_chars}'\n",
+    "            df_summaries = pd.read_csv(f'{summaries_fpath}/{summary_id}.csv', index_col=0)\n",
     "\n",
     "            missing_summaries = set(df_test.index) - set(df_test.index)\n",
     "            if len(missing_summaries) > 0:\n",
@@ -517,11 +447,8 @@
     "            df_test = pd.merge(df_test, df_summaries, left_index=True, right_index=True, how='left')\n",
     "            df_test['SUMMARY'] = df_test.apply(lambda x: x['text'] if x['SUMMARY'] != x['SUMMARY'] else x['SUMMARY'], axis=1)\n",
     "\n",
-    "            # Middle-truncates long texts...\n",
+    "            # Loads summaries middle-truncating long texts...\n",
     "            df_test['SUMMARY'] = df_test['SUMMARY'].apply(lambda x: x[:(max_chars//2)] + x[-(max_chars//2):] if len(x) > max_chars else x)\n",
-    "            ## End load summary\n",
-    "\n",
-    "\n",
     "\n",
     "            df_test_i = df_test.copy()\n",
     "            df_test_i['input_query'] = df_test_i['SUMMARY'].apply(lambda x: json.dumps({'REPORT': x}))\n",
@@ -535,18 +462,14 @@
     "            print(i_type)\n",
     "            raise NotImplementedError\n",
     "\n",
-    "        print(f'> [INPUT_TYPE]: {i_type_id}')\n",
+    "        print(f'> [INPUT_TYPE]: {i_type}')\n",
     "\n",
     "        for o_type_id, o_type_format in output_type.items():\n",
     "            for n_ctx, temp in product(num_ctx, temps):\n",
     "\n",
-    "                # NOTE: Input type R and S use the same base model:\n",
-    "                i_type_id_model = i_type_id\n",
-    "                #i_type_id_model = 'R' if i_type_id_model == 'S' else i_type_id_model\n",
-    "\n",
     "                # Resolves model\n",
-    "                # # Models need to exists in the online instance!\n",
-    "                model = f'{base_model}_{i_type_id_model}_{o_type_id}'\n",
+    "                # # Models need to be ready in the online instance!\n",
+    "                model = f'{base_model}_{i_type}_{o_type_id}'\n",
     "\n",
     "                print(f'> [OUTPUT_TYPE]: {o_type_id}, ({n_ctx} ctx, {temp} temp)')\n",
     "\n",
@@ -556,17 +479,8 @@
     "                    # Iterates every query in the test set\n",
     "                    print(f'> Processing input {i} out of {len(df_test_i)}...', end='\\r')\n",
     "\n",
-    "                    #patient_input = json.dumps({row.name: row['input_query'][:20000]})\n",
     "                    fromatted_input = row['input_query']\n",
-    "\n",
-    "                    #print(fromatted_input)\n",
-    "                    #print('...')\n",
-    "                    #print(json.loads(fromatted_input))\n",
-    "                    #print(type(json.loads(fromatted_input)))\n",
-    "                    #print(json.loads(fromatted_input).keys())\n",
-    "\n",
     "                    data = {'model': model,  # Explicit model to use\n",
-    "                            #'options': {'num_ctx': n_ctx * 1024, 'temperature': temp},\n",
     "                            'options': {\n",
     "                                'num_ctx': n_ctx * 1024,\n",
     "                                'temperature': temp, # 0?\n",
@@ -574,12 +488,10 @@
     "                                'top_k': top_k,\n",
     "                                'top_p': top_p\n",
     "                                },\n",
-    "                            #'options': {'seed': 55},\n",
     "                            'keep-alive': -1,  # Keep connection open\n",
     "                            'prompt': fromatted_input,\n",
     "                            'stream': False,  # Wait and return all the result at once\n",
     "                            'format': o_type_format,\n",
-    "                            #'seed': SEED\n",
     "                        }\n",
     "                    # Prepares query\n",
     "                    data = json.dumps(data)\n",
@@ -592,14 +504,12 @@
     "                    response = requests.post(instance, cookies=cookies, headers=headers, data=data)\n",
     "                    json_response = json.loads(response.text)['response']\n",
     "                    responses[index] = json.loads(json_response) # Keeps the dictionary version of the json response\n",
-    "                    #summarized_texts.append(json.loads(response)['summary'])\n",
     "                    i+=1\n",
     "\n",
     "                # Export results\n",
-    "                # TODO: Save online\n",
     "                df_responses = pd.DataFrame(responses).T\n",
-    "                test_id = f'{base_model}_{i_type_id}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
-    "                df_responses.to_csv(f'{pjpath}/exps/results/llms/simple/{test_id}.csv')\n",
+    "                test_id = f'{base_model}_{i_type}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
+    "                df_responses.to_csv(res_fpath / f'{test_id}.csv')\n",
     "                tests[test_id] = df_responses\n",
     "                print(f'\\n')"
    ]
