--- a/tools/embeddings_sbert.ipynb
+++ b/tools/embeddings_sbert.ipynb
@@ -273,11 +273,11 @@
       "No sentence-transformers model found with name nazyrova/clinicalBERT. Creating a new one with mean pooling.\n",
       "Some weights of BertModel were not initialized from the model checkpoint at nazyrova/clinicalBERT and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Batches: 100%|██████████| 20/20 [01:31<00:00,  4.58s/it]\n",
+      "Batches: 100%|██████████| 20/20 [01:37<00:00,  4.89s/it]\n",
       "No sentence-transformers model found with name nazyrova/clinicalBERT. Creating a new one with mean pooling.\n",
       "Some weights of BertModel were not initialized from the model checkpoint at nazyrova/clinicalBERT and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "Batches: 100%|██████████| 20/20 [01:29<00:00,  4.50s/it]"
+      "Batches: 100%|██████████| 20/20 [01:36<00:00,  4.83s/it]"
      ]
     },
     {
@@ -303,6 +303,10 @@
     "    'show_progress_bar': True,\n",
     "    'convert_to_numpy': True\n",
     "}\n",
+    "emb_fpath = Path(f'{mimicpath}/embeddings')\n",
+    "\n",
+    "# Creates summary path in disk\n",
+    "emb_fpath.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "m_count = 1\n",
     "for modname, mod_bsize, mod_truncation in modnames:\n",
@@ -325,7 +329,7 @@
     "\n",
     "    # Exports result to disk\n",
     "    print(f'> Exporting resulting embeddings to {mimicpath}...')\n",
-    "    with open(mimicpath / f'embeddings_{re.sub('[^a-zA-Z0-9]+', '', modname)}_{'summary_' if summaries else ''}S{samp_size}_T{mod_truncation}{'_balanced' if balanced_data else ''}{'_PR' if len(prepend_columns)>0 else ''}.npy', 'wb') as ofile:\n",
+    "    with open(emb_fpath / f'embeddings_{re.sub('[^a-zA-Z0-9]+', '', modname)}_{'summary_' if summaries else ''}S{samp_size}_T{mod_truncation}{'_balanced' if balanced_data else ''}{'_PR' if len(prepend_columns)>0 else ''}.npy', 'wb') as ofile:\n",
     "        np.save(ofile, embeddings)\n",
     "\n",
     "    m_count += 1"
