--- a/tools/summarizer.ipynb
+++ b/tools/summarizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "'\\n    While we can control the context size for most ollama models tampering with num_ctx, this is not\\n    the full story. num_ctx includes the size of the answer given by the model, so\\n    when dealing with complex and long prompts this might lead to incomplete, short or incoherent answers.\\n    We opted for truncating long reports in favor of avoiding this issues. max_chars parameter controls this truncation\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "27210508  AGE: 72\\nGENDER: M\\nMARITAL STATUS: MARRIED\\nR..."
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,6 +260,10 @@
    "source": [
     "instance = 'http://localhost:11434/api/generate'\n",
     "auth_cookie = ''\n",
+    "summary_fpath = Path(f'{mimicpath}/summaries')\n",
+    "\n",
+    "# Creates summary path in disk\n",
+    "summary_fpath.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for base_model in base_models:\n",
     "    print(f'> [BASE MODEL]: {base_model}')\n",
@@ -271,7 +275,7 @@
     "\n",
     "    # Resolves responses disk path\n",
     "    summary_id = f'summary_S{str(samp_size)}{'_balanced' if balanced_data else ''}{'_sp' + target_split if target_split else ''}_{base_model}_mc{str(max_chars)}{'_ss' + str(subsamp_size) if subsamp_size else ''}'\n",
-    "    summary_path = Path(f'{mimicpath}/{summary_id}.csv')\n",
+    "    summary_path = summary_fpath / f'{summary_id}.csv'\n",
     "\n",
     "    if summary_path.is_file():\n",
     "        # Loads existing file and assumes it contains the same data structure as the generated output (ie, is a compatible dataframe)\n",
