--- a/exps/llms_cot1p1nn.ipynb
+++ b/exps/llms_cot1p1nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +11,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "\n",
+    "from src.minicbr import MiniCBR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Project path is /home/daucco/ownCloud-UPM/CBR/llms4mortality\n"
+     ]
+    }
+   ],
    "source": [
     "## Project root path\n",
     "pjpath = ''\n",
@@ -41,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,22 +71,44 @@
     "\n",
     "SEED = 42\n",
     "\n",
-    "# Controls which data to load\n",
+    "## Controls which data file to load\n",
     "samp_size = 5000\n",
     "balanced_data = True\n",
+    "max_chars = 22000       # Anything longer than this will be middle-truncated\n",
+    "ss_size = 200\n",
     "\n",
-    "#base_model = 'iv_ll3_direct'  # Needs to be available\n",
+    "## CBR configs\n",
+    "#knn = 1\n",
+    "weighted = True\n",
+    "summary_mode = False    # Whether to use summaries in the CBR part of the query (ie, finding neighbours)\n",
+    "withprepended = True    # Whether to load embeddings that were computed out of texts with preprended patient info\n",
+    "# Load by name and truncation side\n",
+    "modname, mod_truncation = ('nazyrova/clinicalBERT', 'middle')\n",
+    "# Default feature map for dynamic weighted\n",
+    "feature_map = {\n",
+    "    'emb': ('cosine', False, 0.33),\n",
+    "    'age': ('euclidean', True, 0.33),\n",
+    "    #'gender': ('jaccard', False, .07),\n",
+    "    #'admission_type': ('jaccard', False, .07),\n",
+    "    #'insurance': ('jaccard', False, .07),\n",
+    "    #'marital_status': ('jaccard', False, .07),\n",
+    "    #'race': ('jaccard', False, .07),\n",
+    "    'drg_mortality': ('euclidean', True, 0.33),\n",
+    "    #'drg_code': ('jaccard', False, .07),\n",
+    "}\n",
+    "fit_features = False    # Handle to fit dynamic weights\n",
+    "# Params for fitting dynamic weights\n",
+    "prr_delta_weight = 0.1      # .2, .1\n",
+    "prr_score_metric = 'mcc'    # uf1, mf1, mcc\n",
     "\n",
+    "## Controls which LLM model to fire\n",
     "base_models = [\n",
     "    'll3',\n",
+    "    #'medgenius32b',\n",
+    "    #'dsmedical8b',\n",
+    "    #'biomistral7b'\n",
     "]\n",
-    "\n",
-    "# Slice long input: Just keep up to max_words of each text\n",
-    "max_chars = 22000\n",
-    "subsamp_size = 200  # Number of entries to test model with\n",
-    "\n",
-    "# LLM parameters\n",
-    "input_type = 'S'    # (R)eport, (R)eport and (C)hart data as json\n",
+    "input_type = 'S'    # Summaries as input\n",
     "output_type = {     # Maps type of output with the actual format that will be requested in the query\n",
     "    'M': {  # Just mortality      \n",
     "            'type': 'object',\n",
@@ -86,9 +120,16 @@
     "            'required': [\n",
     "                'DIES'\n",
     "            ]\n",
-    "            }\n",
+    "           },\n",
     "    }\n",
     "\n",
+    "## LLM params\n",
+    "n_ctx = 32      # Context length (x 1024)\n",
+    "temp = 0.1      #[0.0, *0.1, 0.3, 0.7, 1.0]   # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
+    "top_k = 20\n",
+    "top_p = 0.5\n",
+    "\n",
+    "## Additional data prepro options\n",
     "# This is the collection of columns that contains the relevant patient info that will be provided to the LLM with the text report\n",
     "# Remapping some column names to make them more significant in the prompt\n",
     "pdc_remap = {\n",
@@ -100,34 +141,158 @@
     "    'diagnose_group_mortality': 'MORTALITY RISK',\n",
     "    'insurance': 'INSURANCE',\n",
     "    #'text': 'REPORT'\n",
-    "}\n",
-    "\n",
-    "n_ctx = 32   # Context length (x 1024)\n",
-    "temp = 0.0 # Temperature option for the LLM. The greater, the more creative the answer (def 0.1)\n",
-    "top_k = 20\n",
-    "top_p = 0.5"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load precomputed summaries (both from test entries and neighbours)\n",
+    "# Load data\n",
+    "# Load precomputed dataframe.\n",
+    "dfname = f'mimiciv_4_mortality_S{samp_size}{'_balanced' if balanced_data else ''}'\n",
+    "df = pd.read_csv(mimicpath / f'{dfname}.csv.gz')\n",
     "\n",
-    "summary_id = f'summary_{max_chars}mc_ss{subsamp_size}'\n",
-    "neigh_summary_id = f'neighbour_summary_{max_chars}mc_ss{subsamp_size}_1p1'\n",
-    "df_test_summaries = pd.read_csv(f'{mimicpath}/summaries/{summary_id}.csv', index_col=0)\n",
-    "df_neigh_summaries_lives = pd.read_csv(f'{mimicpath}/summaries/{neigh_summary_id}_lives.csv', index_col=0)\n",
-    "df_neigh_summaries_dies = pd.read_csv(f'{mimicpath}/summaries/{neigh_summary_id}_dies.csv', index_col=0)"
+    "# We also need the dummies for CBR\n",
+    "df_dummies = pd.read_csv(mimicpath / f'd_{dfname}.csv.gz')\n",
+    "\n",
+    "# Resolve target (ie, mortality within 30 days of discharge)\n",
+    "df['DIES'] = df['delta_days_dod'].apply(lambda x: x > 0 and x <= 30)\n",
+    "df_dummies['DIES'] = df_dummies['delta_days_dod'].apply(lambda x: x > 0 and x <= 30)\n",
+    "\n",
+    "# Load precomputed splits\n",
+    "with open(mimicpath / f'hadmid_splits_S{samp_size}{'_balanced' if balanced_data else ''}.json', 'r') as ifile:\n",
+    "    splits_hadmids = json.load(ifile)\n",
+    "    \n",
+    "# Load sorted hadm_ids from disk\n",
+    "with open(mimicpath / f'hadmid_sorted_S{samp_size}{'_balanced' if balanced_data else ''}.json', 'r') as ifile:\n",
+    "    emb_hadmids = json.load(ifile)['HADM_ID']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Resolve test data\n",
+    "\n",
+    "df_test = df.set_index('hadm_id').loc[splits_hadmids['test']]\n",
+    "df = df.set_index('hadm_id')\n",
+    "df['DIES'] = df['DIES'].apply(lambda x: 'YES' if x else 'NO')   # Need to do this for json\n",
+    "df_test = df_test.sample(ss_size, random_state=SEED) if ss_size else df_test "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> Loading embeddings from embeddings_nazyrovaclinicalBERT_S5000_Tmiddle_balanced_PR.npy...\n",
+      "> Finding neighbours for test entries...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loads embeddings\n",
+    "\n",
+    "# Path where embeddings are located\n",
+    "embpath = mimicpath / 'embeddings'\n",
+    "\n",
+    "modname = re.sub('[^a-zA-Z0-9]+', '', modname)\n",
+    "mod_fname = f'embeddings_{modname}_{'summary_' if summary_mode else ''}S{samp_size}_T{mod_truncation}{'_balanced' if balanced_data else ''}{'_PR' if withprepended else ''}.npy'\n",
+    "print(f'> Loading embeddings from {mod_fname}...')\n",
+    "embeddings = np.load(embpath / mod_fname)\n",
+    "\n",
+    "# hadmid-index mappings (and back)\n",
+    "hadm2idx = {hadm: i for i, hadm in enumerate(emb_hadmids)}\n",
+    "idx2hadm = {i: hadm for hadm, i in hadm2idx.items()}\n",
+    "\n",
+    "# Put embeddings in df iteratively taking their hadm_id into account\n",
+    "df_embs = pd.DataFrame(columns=['emb'])\n",
+    "df_embs.index.name = 'hadm_id'\n",
+    "for i, emb in enumerate(embeddings):\n",
+    "    #df_embs.at[len(df_embs), 'emb'] = emb\n",
+    "    df_embs.at[idx2hadm[i], 'emb'] = emb\n",
+    "\n",
+    "# Merge df_embs with actual data df\n",
+    "_df = df_dummies.copy()\n",
+    "_df = pd.merge(_df, df_embs, on='hadm_id', how='inner')\n",
+    "\n",
+    "# Columns to keep in main dataframe for the experiment\n",
+    "target_prefixes = ['age', 'gender', 'admission_type', 'insurance', 'marital_status', 'race', 'drg_mortality', 'drg_code', 'emb']\n",
+    "sol_prefixes = ['DIES']\n",
+    "\n",
+    "target_columns = [c for c in _df.columns if c.startswith(tuple(target_prefixes))]\n",
+    "\n",
+    "# Prepares data for CBR model\n",
+    "dfd_cb_X = _df.set_index('hadm_id').loc[splits_hadmids['cb']][target_columns]\n",
+    "dfd_test_X = _df.set_index('hadm_id').loc[df_test.index][target_columns]\n",
+    "\n",
+    "dfd_cb_y = _df.set_index('hadm_id').loc[splits_hadmids['cb']][sol_prefixes]\n",
+    "dfd_test_y = _df.set_index('hadm_id').loc[df_test.index][sol_prefixes]\n",
+    "\n",
+    "# Resolve 2 distinct case bases: one for the patients who survived, and for the ones who died\n",
+    "hadm_id_cb_lived = dfd_cb_y[dfd_cb_y['DIES'] == False].index.tolist()\n",
+    "hadm_id_cb_died = dfd_cb_y[dfd_cb_y['DIES'] == True].index.tolist()\n",
+    "\n",
+    "dfd_cb_X_died = dfd_cb_X.loc[hadm_id_cb_died]\n",
+    "dfd_cb_y_died = dfd_cb_y.loc[hadm_id_cb_died]\n",
+    "dfd_cb_X_lived = dfd_cb_X.loc[hadm_id_cb_lived]\n",
+    "dfd_cb_y_lived = dfd_cb_y.loc[hadm_id_cb_lived]\n",
+    "\n",
+    "# Initializes MiniCBR and resolves 1NN neighbours for test data\n",
+    "# One CBR per mortality type\n",
+    "print(f'> Finding neighbours for test entries...')\n",
+    "mcbr_died = MiniCBR(df_X=dfd_cb_X_died, df_y=dfd_cb_y_died, feature_map=feature_map)\n",
+    "mcbr_lived = MiniCBR(df_X=dfd_cb_X_lived, df_y=dfd_cb_y_lived, feature_map=feature_map)\n",
+    "\n",
+    "ndists_died, nidxs_died = mcbr_died.find(dfd_test_X, 1)\n",
+    "ndists_lived, nidxs_lived = mcbr_lived.find(dfd_test_X, 1)\n",
+    "\n",
+    "# Translate natural indices into actual hadm_id from neighbours. Save as a separate df\n",
+    "# The index of this are the IDs of the test entries, while neigh_hadmid maps to the ID of the neighbour\n",
+    "neigh_hadm_id_died = [dfd_cb_X_died.iloc[idx[0]].name for idx in nidxs_died]\n",
+    "neigh_hadm_id_lived = [dfd_cb_X_lived.iloc[idx[0]].name for idx in nidxs_lived]\n",
+    "df_neighs = pd.DataFrame({'neigh_hadmid_died': neigh_hadm_id_died, 'neigh_hadmid_lived': neigh_hadm_id_lived}, index=dfd_test_X.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load precomputed summaries\n",
+    "# This is required for CoT\n",
+    "\n",
+    "summaries_fpath = mimicpath / 'summaries'\n",
+    "sum_model = 'll3'\n",
+    "summary_id = f'summary_S{samp_size}{'_balanced' if balanced_data else ''}_{sum_model}_mc{max_chars}'\n",
+    "df_summaries = pd.read_csv(f'{summaries_fpath}/{summary_id}.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> [BASE MODEL]: ll3\n",
+      ">> Processing row 200 out of 200\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Fire instance\n",
     "# NOTE: Assuming fixed input type (S) and output (M)\n",
@@ -138,54 +303,53 @@
     "instance = 'http://localhost:11434/api/generate'\n",
     "auth_cookie = ''\n",
     "\n",
+    "res_fpath = Path(f'{pjpath}/exps/results/llms/cot1p1')\n",
+    "res_fpath.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "\n",
     "for base_model in base_models:\n",
+    "    print(f'> [BASE MODEL]: {base_model}')\n",
     "    responses = {}\n",
     "    i=1\n",
     "\n",
-    "    for index, row in df_test_summaries.iterrows():\n",
-    "        print(f'>> Processing row {i} out of {len(df_test_summaries)}', end='\\r')\n",
+    "    for index, row in df_test.iterrows():\n",
+    "        print(f'>> Processing row {i} out of {len(df_test)}', end='\\r')\n",
     "\n",
-    "        # Get text from entry\n",
-    "        text = row['SUMMARY']\n",
+    "        # Get summary text from entry\n",
+    "        text = df_summaries.loc[index].iloc[0]\n",
     "\n",
     "        # Truncate middle if resulting text is longer than max_chars\n",
     "        if len(text) > max_chars:\n",
     "            print(f'(i) Text exceeds the max char limit ({len(text)}) in entry {index}. Middle-truncating to {max_chars}...')\n",
     "            text = text[:(max_chars//2)] + text[-(max_chars//2):]\n",
     "            print(f'... Result truncate: {len(text)}')\n",
-    "        \n",
+    "\n",
+    "        # Get neighour test from entry\n",
+    "        neigh_died_hadm_id = df_neighs.loc[index]['neigh_hadmid_died']\n",
+    "        neigh_died_text = df_summaries.loc[neigh_died_hadm_id]['SUMMARY']\n",
+    "        neigh_lived_hadm_id = df_neighs.loc[index]['neigh_hadmid_lived']\n",
+    "        neigh_lived_text = df_summaries.loc[neigh_lived_hadm_id]['SUMMARY']\n",
+    "\n",
+    "        # Truncate middle if resulting text is longer than max_chars\n",
+    "        if len(neigh_died_text) > max_chars:\n",
+    "            print(f'(i) Neighbour text exceeds the max char limit ({len(neigh_died_text)}) in entry {index}. Middle-truncating to {max_chars}...')\n",
+    "            neigh_died_text = neigh_died_text[:(max_chars//2)] + neigh_died_text[-(max_chars//2):]\n",
+    "            print(f'... Result truncate: {len(neigh_died_text)}')\n",
+    "        if len(neigh_lived_text) > max_chars:\n",
+    "            print(f'(i) Neighbour text exceeds the max char limit ({len(neigh_lived_text)}) in entry {index}. Middle-truncating to {max_chars}...')\n",
+    "            neigh_lived_text = neigh_lived_text[:(max_chars//2)] + neigh_lived_text[-(max_chars//2):]\n",
+    "            print(f'... Result truncate: {len(neigh_lived_text)}')\n",
+    "\n",
     "        formatted_input = json.dumps({'REPORT': text})\n",
-    "        \n",
-    "        # Get neighour test from entry\n",
-    "        neigh_lives_text = df_neigh_summaries_lives.loc[index]['SUMMARY']\n",
-    "        neigh_lives_outcome = df_neigh_summaries_lives.loc[index]['DIES']\n",
-    "        # Truncate middle if resulting text is longer than max_chars\n",
-    "        if len(neigh_lives_text) > max_chars:\n",
-    "            print(f'(i) Neighbour text exceeds the max char limit ({len(neigh_lives_text)}) in entry {index}. Middle-truncating to {max_chars}...')\n",
-    "            neigh_lives_text = neigh_lives_text[:(max_chars//2)] + neigh_lives_text[-(max_chars//2):]\n",
-    "            print(f'... Result truncate: {len(neigh_lives_text)}')\n",
-    "\n",
-    "        formatted_input_neigh_lives = json.dumps({'REPORT': neigh_lives_text})\n",
-    "        formatted_output_neigh_lives = json.dumps({'DIES': neigh_lives_outcome})\n",
-    "\n",
-    "        # Get neighour test from entry\n",
-    "        neigh_dies_text = df_neigh_summaries_dies.loc[index]['SUMMARY']\n",
-    "        neigh_dies_outcome = df_neigh_summaries_dies.loc[index]['DIES']\n",
-    "        # Truncate middle if resulting text is longer than max_chars\n",
-    "        if len(neigh_dies_text) > max_chars:\n",
-    "            print(f'(i) Neighbour text exceeds the max char limit ({len(neigh_dies_text)}) in entry {index}. Middle-truncating to {max_chars}...')\n",
-    "            neigh_dies_text = neigh_dies_text[:(max_chars//2)] + neigh_dies_text[-(max_chars//2):]\n",
-    "            print(f'... Result truncate: {len(neigh_dies_text)}')\n",
-    "\n",
-    "        formatted_input_neigh_dies = json.dumps({'REPORT': neigh_dies_text})\n",
-    "        formatted_output_neigh_dies = json.dumps({'DIES': neigh_dies_outcome})\n",
+    "        formatted_input_neigh_died = json.dumps({'REPORT': neigh_died_text})\n",
+    "        formatted_input_neigh_lived = json.dumps({'REPORT': neigh_lived_text})\n",
     "\n",
     "        # Builds full CoT prompt with example\n",
-    "        cot1p1_prompt = \"\\nThe following is an example of the medical text report of a patient that died within 30 days of hospital discharge:\\n\"\n",
-    "        cot1p1_prompt += formatted_input_neigh_dies\n",
-    "        cot1p1_prompt += \"\\nIn contrast, the following is an example of the medical text report of a patient that stayed alive after 30 days of hospital discharge:\\n\"\n",
-    "        cot1p1_prompt += formatted_input_neigh_lives\n",
-    "        cot1p1_prompt += \"\\nNow decide if the following text report corresponds to a patient who is likely to die within 30 days of medical discharge as per your main instructions, and considering that the previous examples corresponds to two separate medical cases that are clinically similar to the one you have to resolve now:\\n\"\n",
+    "        cot1p1_prompt = \"\\nBelow is an example of the medical report from a patient with a similar clinical profile that survived past 30 days after discharge from hospital:\\n\"\n",
+    "        cot1p1_prompt += formatted_input_neigh_lived\n",
+    "        cot1p1_prompt += \"\\nAnd here's another example of the medical report from a patient with a similar clinical profile that died within 30 days after discharge:\\n\"\n",
+    "        cot1p1_prompt += formatted_input_neigh_died\n",
+    "        cot1p1_prompt += \"\\nYou will be provided now with a medical case for which the outcome is unkown, but that is similar to both of the examples you were given above. You must decide which of the exemplar cases provided is the most similar to the case with unkown outcome. Use the medical report from the most similar case and its known outcome together with the report of the case with unkown outcome to decide if, for the latter, the patient will die within 30 days after discharge from the hospital.\\n\"\n",
     "        cot1p1_prompt += formatted_input\n",
     "\n",
     "        model = f'{base_model}_{i_type_id}_{o_type_id}'\n",
@@ -213,21 +377,33 @@
     "        cot1nn_response = requests.post(instance, cookies=cookies, headers=headers, data=data)\n",
     "        cot1nn_response_json = json.loads(cot1nn_response.text)['response']\n",
     "        responses[index] = json.loads(cot1nn_response_json) # Keeps the dictionary version of the json response\n",
-    "        #summarized_texts.append(json.loads(response)['summary'])\n",
-    "\n",
     "        i+=1\n",
     "\n",
     "    # Export results\n",
     "    df_responses = pd.DataFrame(responses).T\n",
     "    test_id = f'{base_model}_{i_type_id}_{o_type_id}_{n_ctx}k_t{str(temp).replace('.', '')}'\n",
-    "    df_responses.to_csv(f'../results/ex2/{test_id}.csv')\n",
+    "    df_responses.to_csv(res_fpath / f'{test_id}.csv')\n",
     "    print(f'\\n')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
